DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Branches__c/fields/TIMBASURVEYS__Hidden__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>