DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Branches__c/fields/TIMBASURVEYS__OptionBranchingRule__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__OptionBranchingRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OptionBranchingRule</label>
    <referenceTo>TIMBASURVEYS__OptionBranchingRule__c</referenceTo>
    <relationshipLabel>Branches</relationshipLabel>
    <relationshipName>Branches</relationshipName>
    <type>Lookup</type>
</CustomField>