DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Branches__c/fields/TIMBASURVEYS__QuestionBranchingRule__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__QuestionBranchingRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuestionBranchingRule</label>
    <referenceTo>TIMBASURVEYS__QuestionBranchingRule__c</referenceTo>
    <relationshipLabel>Branches</relationshipLabel>
    <relationshipName>Branches</relationshipName>
    <type>Lookup</type>
</CustomField>