DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Branches__c/fields/TIMBASURVEYS__Required__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>